# bestbeher

./: .dockerignore.bak  .env.example  .env.template  .gitignore  COCKROACHDB_SETUP.md  DATABASE_SETUP.md  DEFERRABLE_FIX.md  DEPLOYMENT.md  Dockerfile.bak  MANIFEST.in  MIGRATION_ALREADY_EXISTS_FIX.md  PASSWORD_FIX.md  QUICK_FIX_STEPS.md  README.md  RENDER_COMMANDS.md  RENDER_DEPLOYMENT.md  RENDER_ENV_SETUP.md  SSL_FIX.md  UPDATE_PASSWORD_NOW.md  VIDEO_SYSTEM_UPGRADE_SUMMARY.md  build.sh  deploy.ps1  env.example  fix_video_add.py  gptai.py  pyproject.toml  render.yaml  render_build.sh  requirements-dev.txt  requirements-temp.txt  requirements.txt  setup.cfg  setup.py  setup.sh  start.sh
Website/myproject/: cert.crt  cert.key  run_dev.py  test_db_connection.py  wsgi.py
Website/myproject/myapp/: __init__.py  add_video_fixed.py  admin.py  apps.py  forms.py  mega_service.py  models.py  urls.py  urls_api.py  urls_mega.py  urls_video.py  utils.py  views.py  views_api.py  views_fixed.py  views_mega.py  views_video.py
Website/myproject/myapp/migrations/: 0001_initial.py  0002_megavideo_video_source_and_more.py
Website/myproject/myapp/services/: google_drive_service.py  mega_service.py  mega_thumbnail_service.py
Website/myproject/myapp/static/css/: admin.css  custom.css  dashboard.css  drive_folders.css
Website/myproject/myapp/static/js/: dashboard.js  drive_folders.js  theme.js
Website/myproject/myapp/static/video/: README.md
Website/myproject/myapp/templates/: base.html  free_course.html  index.html  membership.html  payment_required.html  terms-and-conditions.html  thank_you.html  upload_payment_proof.html
Website/myproject/myapp/templates/admin/: drive_folder_management.html  folder_videos.html  manage_folder_access.html
Website/myproject/myapp/templates/dashboard/: add_mega_video.html  add_video.html  add_video_fixed.html  admin_dashboard.html  audit_logs.html  base.html  dashboard_base.html  drive_folder_management.html  edit_mega_video.html  folder_detail.html  folder_videos_detail.html  folder_videos_list.html  manage_drive_folders.html  profile.html  (+7 more)
Website/myproject/myapp/templatetags/: __init__.py  dashboard_filters.py  myapp_filters.py
Website/myproject/myproject/: production_settings.py  settings.py  urls.py  wsgi.py
(+19 files in other folders)
