[install]
prefix=

[build]
executable=/usr/bin/python3.10

[install_scripts]
prefix=

[aliases]
test=pytest

[options]
include_package_data = True
zip_safe = False
package_dir =
    = .
packages = find:

[options.packages.find]
include = 
    *
    myproject*
    Website*

exclude = 
    tests*
    tests.*
    *.tests
    *.tests.*
    docs*
    .github*
    .vscode*
    .idea*
